# Siberiae2ee

./: .gitignore  LICENSE  README.md  pyproject.toml
siberiae2ee/: __init__.py  cipher.py  e2ee.py  ec.py  hash.py  key_storage.py  mgm.py
tests/: test_vectors.py
